# nitrojacob.github.io

./: EmbeddedSystems.md  README.md  _config.yml  index.md
archives/: EmbeddedSystems.md
courses/: CommunicationEnggLab.md  ComputerArchitectureMicroControllers.md  ElectronicCircuits_Minor.md  ElectronicsWorkshop.md  EmbeddedSystems.md  PowerElectronicsInstrumentationLab.md  ProfessionalEthics.md  c-programming.md
templates/: CMakeLists.txt  vimrc
utils/: analyse_result.html
